--- a/app.json
+++ b/app.json
@@ -1,6 +1,45 @@
 {
   "pages": [
     "pages/home/home",
-    "pages/about/about"
-  ]
+    "pages/about/about",
+    "pages/look/look",
+    "pages/user/user"
+  ],
+  "window": {
+    "navigationBarBackgroundColor": "#ff5777",
+    "navigationBarTextStyle": "white",
+    "navigationBarTitleText": "健康达人",
+    "backgroundColor": "#ffffff",
+    "backgroundTextStyle": "dark",
+    "enablePullDownRefresh": false
+  },
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/home/home",
+        "text": "首页",
+        "iconPath": "assets/tabbar/home.png",
+        "selectedIconPath": "assets/tabbar/home_active.png"
+      },
+      {
+        "pagePath": "pages/look/look",
+        "text": "我看",
+        "iconPath": "assets/tabbar/star.png",
+        "selectedIconPath": "assets/tabbar/star_active.png"
+      },
+      {
+        "pagePath": "pages/about/about",
+        "text": "发现",
+        "iconPath": "assets/tabbar/faxian.png",
+        "selectedIconPath": "assets/tabbar/faxian_active.png"
+      },
+      {
+        "pagePath": "pages/user/user",
+        "text": "账号",
+        "iconPath": "assets/tabbar/user.png",
+        "selectedIconPath": "assets/tabbar/user_active.png"
+      }
+    ],
+    "selectedColor": "#ff5777"
+  }
 }
