--- a/project.config.json
+++ b/project.config.json
@@ -16,7 +16,7 @@
 		"scopeDataCheck": false
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.0.4",
+	"libVersion": "2.11.0",
 	"appid": "wx11a86a119889354d",
 	"projectname": "MiniProgram",
 	"debugOptions": {
@@ -34,13 +34,28 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
-		"miniprogram": {
+		"gamePlugin": {
 			"current": -1,
 			"list": []
+		},
+		"miniprogram": {
+			"current": -1,
+			"list": [
+				{
+					"id": -1,
+					"name": "我看",
+					"pathName": "pages/look/look",
+					"scene": null
+				}
+			]
 		}
 	}
 }
